fixed overflow y

--- a/style.css
+++ b/style.css
@@ -698,7 +698,7 @@ nav.navbar.bg-light.purple {
 }
 
 
-/*html,body{
+html,body{
   overflow-x: hidden;
   overflow-y: auto;
 }
